<resources>
    <string name="app_name">Mini Golf</string>
    <string name="your_score_title">Your Score:</string>
    <string name="player_score_value">00000</string>
    <string name="game_over_screen_title">Game Over!</string>
    <string name="high_score_rank_title">High Score Rank:</string>
    <string name="player_rank_text">0</string>
    <string name="play_again_button_text">Play Again</string>
    <string name="high_scores_button_text">High Scores</string>
    <string name="score_title">Score:</string>
    <string name="score_value">000</string>
    <string name="moves_left_title">Moves Left:</string>
    <string name="moves_left_value">00</string>
    <string name="image_desc_grass">Grass</string>
    <string name="developers">Wednesday Wilson and Harmon Transfield</string>
    <string name="game_title">Mini Golf</string>
    <string name="str_btn_start">Play</string>
    <string name="str_btn_high_score">High Scores</string>
    <string name="high_scores_title">High Scores</string>
    <string name="nil">- - -</string>
    <string name="blue_ribbon">blue ribbon</string>
    <string name="red_ribbon">red ribbon</string>
    <string name="bronze_trophy">bronze trophy</string>
    <string name="silver_trophy">silver trophy</string>
    <string name="gold_trophy">gold trophy</string>
    <string name="reason_goes_here">Reason goes here</string>
</resources>