<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HighscoreActivity"
    android:orientation="vertical"
    android:background="@drawable/grass"
    android:id="@+id/highscore_screen">

    <!-- Highscore title -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/high_scores_title"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="#3E3E3E"
        android:layout_weight="1"
        android:layout_margin="20dp"
        android:autoSizeTextType="uniform">
    </TextView>

    <!-- HIGH SCORE TABLE -->
    <LinearLayout
        android:id="@+id/highscore_ranks_text_area"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="7"
        android:orientation="horizontal">

        <!-- AWARDS -->
        <LinearLayout
            android:id="@+id/award_placement_images"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <!-- 1ST -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="50dp"
                android:layout_weight="1"
                android:background="@drawable/gold"
                android:contentDescription="@string/gold_trophy">
            </ImageView>

            <!-- 2ND -->
            <ImageView
                android:background="@drawable/silver"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginStart="50dp"
                android:scaleX="0.9"
                android:scaleY="0.9"
                android:contentDescription="@string/silver_trophy">
            </ImageView>

            <!-- 3RD -->
            <ImageView
                android:background="@drawable/bronze"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginStart="50dp"
                android:scaleX="0.8"
                android:scaleY="0.8"
                android:contentDescription="@string/bronze_trophy">
            </ImageView>

            <!-- 4TH -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="50dp"
                android:layout_weight="1"
                android:background="@drawable/red_ribbon"
                android:scaleX="0.6"
                android:scaleY="0.7"
                android:contentDescription="@string/red_ribbon">
            </ImageView>

            <!-- 5TH -->
            <ImageView
                android:background="@drawable/blue_ribbon"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginStart="50dp"
                android:scaleX="0.5"
                android:scaleY="0.6"
                android:contentDescription="@string/blue_ribbon">
            </ImageView>
        </LinearLayout>

        <!-- SCORES -->
        <LinearLayout
            android:id="@+id/score_values"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <!-- 1ST -->
            <TextView
                android:id="@+id/score_first"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/nil"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1">
            </TextView>

            <!-- 2ND -->
            <TextView
                android:id="@+id/score_second"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/nil"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1">
            </TextView>

            <!-- 3RD -->
            <TextView
                android:id="@+id/score_third"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/nil"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1">
            </TextView>

            <!-- 4TH -->
            <TextView
                android:id="@+id/score_fourth"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/nil"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1">
            </TextView>

            <!-- 5TH -->
            <TextView
                android:id="@+id/score_fifth"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/nil"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1">
            </TextView>
        </LinearLayout>
    </LinearLayout>

    <!-- Play again button -->
    <Button
        android:id="@+id/button_play_again"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/play_again_button_text"
        android:textColor="#3E3E3E"
        android:layout_margin="50dp"
        android:onClick="onclickGameStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline">
    </Button>
</LinearLayout>