<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/tiled_wall"
    android:id="@+id/gamescreen_fullscreen">

    <!-- Main FULL linear layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <!-- Horizontal layout for game text -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <!-- Score text -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1" >

            <!-- Score Title -->
            <TextView
                android:id="@+id/gamescreen_score_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/score_title"
                android:textColor="@color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_margin="5dp"
                android:layout_weight="1" />

            <!-- Score value text -->
            <TextView
                android:id="@+id/gamescreen_score_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/score_value"
                android:textColor="@color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_margin="5dp"
                android:layout_weight="1" />
        </LinearLayout>

        <!-- Moves Left text -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1" >

            <!-- Moves Left title-->
            <TextView
                android:id="@+id/gamescreen_moves_left"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/moves_left_title"
                android:textColor="@color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_margin="5dp"
                android:layout_weight="3" />

            <!-- Moves Left value -->
            <TextView
                android:id="@+id/gamescreen_moves_left_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_margin="5dp"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

        <!-- Game screen interactive area -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout_graphics"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/tiled_grass"/>
    </LinearLayout>
</RelativeLayout>